# d3d9-to-11

./: .gitignore  Cargo.toml
.cargo/: config
src/: entry.rs  error.rs  lib.rs  macros.rs
src/core/: adapter.rs  context.rs  enums.rs  fmt.rs  mod.rs
src/d3d11/: buffer.rs  devctx.rs  texture.rs  util.rs
src/dev/: buffer.rs  device.rs  resource.rs  shader.rs  surface.rs  swapchain.rs
src/dev/state/: block.rs
src/dev/texture/: cube.rs  texture2d.rs
tests/: Cargo.toml
toolchain/: d3d9.def
